@@ -16,6 +16,7 @@ Version 0.5 (...)
     subclassing.
   * Now supports a "safe load" mode, where exceptions aren't thrown.
   * Added unit tests for the Configuration class.
+  * Added ability to retrieve converted integer and boolean option values.
 
 ---------------------------------------------------------------------------
 Version 0.4.2 (7 April, 2010)
